--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script src="index.js"></script>
 
   <footer>
-    Made with ❤️ 1111in London.
+    Made with ❤️ in Tokyo.
   </footer>
 </body>
 
